	In osd timeleft can't be more 24h (Gives a long number when box has no internet or time is totally wrong)
	Timed change, set to 0 for old behavior (press ok for change)
	epginfo box was left active but invisible when pressed menu(green key didn't change audio but show epginfonext)
	add to favorite now refreshes view
	added keys from Motorola NYX remote. (Both up/down/left/right keys do the same)
	Turn record key off 

0.25	Get recordings from Streamdev, Restfulapi or SmartTVweb.
	Check if SmartTVweb is on the server if not turn SmartTVweb options off
	Check if Restfulapi is on the server if not turn Restfulapi options off
	Streamdev can also do Rewind, pause, Fastforward.
	Added German translation (Google Translate) so it must be corrected.
	Fixed in GuideView the functionkey information. (After pressing Yellow, Back it wasn't right)
	Duration of recording is show in Recordings list.
	In recordings listing there is an other sublevel for directories, (use subgroup_old = 0 for old version)
	In recordings listing, first sub directory is shown in Header
	Removed some old, not in use, code for recordings listings and direct local recording
	Better support for local recordings, (only 1 local recording is possible)
	<Menu><2> local timers show also local recordings, <OK> or <PLAY> to play.
	Removal of local recordings now possible
	Localrecordings support FF/REW but also the jump in time with 1/4/7 and 3/6/9
	Local recordings time is corrected when watching a local recording. Overview shows epg duration. 
	Changed the color of the infowindow to 'Green' // Infowindow is now 'Red' in case of error, warning or if User attention is needed.
	To stop local recording goto timer menu press stop button.
	<Blue> button gives more info about a (local) timer
	Updated view of local timers, to match more the server timer menu layout.


0.24	vip.getmarks used for selecting getmarks 0 = restfulapi, 1 = SmartTVWeb (not all users have the newest SmartTVWeb)
	Channels update.