@@ -17,7 +17,8 @@ VDR 1.7.29+
 	epginfo box was left active but invisible when pressed menu(green key didn't change audio but show epginfonext)
 	add to favorite now refreshes view
 	added keys from Motorola NYX remote. (Both up/down/left/right keys do the same)
-	Turn record key off 
+	Turn record key off
+	NYX remote hase no stopkey so key 'back' does the same as stop. 
 
 0.25	Get recordings from Streamdev, Restfulapi or SmartTVweb.
 	Check if SmartTVweb is on the server if not turn SmartTVweb options off
